--- a/flops.tex
+++ b/flops.tex
@@ -139,7 +139,7 @@ We say a variety is a minimal model if has nef canonical divisor. In the GIT pic
 
 \subsubsection{Wall Crossing Formula}
 
-cf.~\cite{Kite_2022,ballard2014variation} Let $V$ be a vector space of dimension $n$, and let $T$ be an algebraic torus.
+cf.~\cite{Kite_2022,ballard_mori_2013} Let $V$ be a vector space of dimension $n$, and let $T$ be an algebraic torus.
 
 Let $V$ be a vector space of dimension $n$, and let $T$ be an algebraic torus. Denote $\det V = \sum_i q_i$, where $q_i$ is the $i^\mathrm{th}$ column of the weight matrix $Q$. 
 
@@ -236,8 +236,6 @@ Starting with some fixed stability condition $\theta _1$ and its corresponding v
 	\draw (425.14,51.51) node [anchor=north west][inner sep=0.75pt]  [rotate=-0.04] [align=left] {$\displaystyle \centerdot \chi _{3}$};
 	% Text Node
 	\draw (412.05,177.11) node [anchor=north west][inner sep=0.75pt]  [rotate=-0.04] [align=left] {$\displaystyle \centerdot \chi _{3}$};
-	
-	
 	\end{tikzpicture}
 	
 \end{centering}
@@ -263,7 +261,6 @@ $$
 
 We are interested in finding examples of nontrivial equivalences of derived categories induced by flops, which in the toric picture can be seen by considering the Calabi-Yau case.From this, it is clear that $\mu = 0$ for all walls $W$ in the secondary fan, so any wall crossing induces a flop on the GIT quotients. Moreover, this gives us a way to see the nontrivial autoequivalences which come from these wall crossings. In particular, we will see that these autoequivalences have a nice interpretation as twists around spherical functors. 
 
-
 \subsection{Windows and Spherical functors}
 
 First, we want to make some generalizations on the theory of spherical objects. Recall that a spherical object $\mathcal{E} \in \mathcal{D}(X)$ satisfies the property that $$\mathrm{Hom}(\mathcal{E}, \mathcal{E}[i])= \begin{cases}
@@ -272,7 +269,6 @@ First, we want to make some generalizations on the theory of spherical objects. 
 \end{cases}$$
 and the spherical twist of an object $\mathcal{F}$ around $\mathcal{E}$ is an autoequivalence defined as the cone $$T_\mathcal{E} = C(\mathrm{Hom}(\mathcal{E},\mathcal{F})\otimes \mathcal{E}\xrightarrow{ev} \mathcal{F})$$
 We define spherical functors analogously.
-
 
 \begin{definition}{}{}
 	A functorial exact triangle is a 'triangle' of exact functors $F_{1}, F_{2}, F_{3} : \mathcal{C}\to \mathcal{D}$,    equipped with natural transformations $$
